# ai-r

./: .gitignore  .mcp.json  CHANGELOG.md  CONTEXT.md  CONTRIBUTING.md  Makefile  README.es.md  README.ja.md  README.md  README.ru.md  README.zh-CN.md  install.sh  pyproject.toml  server.json  uninstall.sh
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  dependency-review.yml  docs-lint.yml  gitleaks.yml  install-test.yml  release.yml
docs/: architecture.md  mcp-registration.md  methods.md  methods.ru.md  parsers.md  scenarios.md  search-operators.md  security.md  shared-server.md
docs/examples/: showcase-gallery.md  showcase-gallery.ru.md
examples/audits/: README.md  completeness_check.py  dry_run_check.py  file_frequency.py  quality_check.py
examples/mcp_configs/: antigravity.json  claude.json  codex.toml  opencode.jsonc
install/: README.md  agent-configs.sh
install/pi/skills/ai-r/: SKILL.md
packaging/systemd/: ai-r-mcp.service  ai-r-mcp.socket
scripts/: docs_lint.py  usage_audit.py
src/ai_r/: __init__.py  __main__.py  activity.py  agents.py  attention.py  audit_brief.py  cli.py  diagnostics.py  events.py  file_frequency.py  find_file_edits.py  find_tool_calls.py  incidents.py  legacy_compat.py  liveness.py  locate.py  mcp_server.py  network.py  outcome.py  quotes.py  ranking.py  redact.py  resume.py  security.py  semantic.py  serve.py  session.py  session_diff.py  session_stats.py  tokens.py  user_refs.py
src/ai_r/cli/: __init__.py  __main__.py  main.py  shared.py
src/ai_r/cli/commands/: __init__.py  audit_brief_cmd.py  detect_agent.py  detect_session.py  export.py  file_frequency.py  find_file_edits.py  find_tool_calls.py  list_cmd.py  locate_cmd.py  read_cmd.py  search_cmd.py  stats_cmd.py
src/ai_r/events/: __init__.py  _common.py  aggregate.py  detect.py  diff.py  model.py  plan.py  query.py  render.py
src/ai_r/exporters/: __init__.py  rounds.py
src/ai_r/parsers/: __init__.py  _common.py  _noise.py  _opencode_db.py  _quarantine.py  antigravity.py  claude.py  claude_derive.py  codex.py  models.py  opencode.py  pi.py
src/ai_r/validators/: session_note_check.py
src/ai_reader/: __init__.py
tests/: __init__.py  _parity_helpers.py  conftest.py  test_activity.py  test_agents.py  test_ai_reader_shim.py  test_attention.py  test_audit_brief.py  test_claude_subagent_cost.py  test_claude_tool_use_error.py  test_cli.py  test_cli_error_guard.py  test_cli_redact.py  test_desktop_index_cache.py  test_diagnostics.py  test_docs_sync.py  test_events.py  test_events_plan.py  test_file_frequency.py  test_find_file_edits_reference.py  test_find_tool_calls.py  test_fuzz_parsers.py  test_get_body_tool_call.py  test_haystack_cache_cap.py  test_haystack_cache_eviction.py  test_hermeticity_guard.py  test_incidents.py  test_jsonl_reader.py  test_legacy_compat.py  test_list_sessions_scan_cache.py  test_liveness.py  test_locate.py  test_mcp.py  test_mcp_concurrency.py  test_mcp_strict_args.py  test_model_dimension.py  test_network.py  test_noise.py  test_outcome.py  test_phase3b_parity.py  (+23 more)
tests/exporters/: test_rounds.py
tests/test_parsers/: test_antigravity.py  test_claude.py  test_claude_desktop.py  test_codex.py  test_opencode.py  test_pi.py  test_quarantine.py  test_registry.py
tests/validators/: test_session_note_check.py
