[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-r"
version = "0.2.0"
description = "Multi-agent session reader (Claude, Codex, OpenCode, Antigravity, Pi) with MCP server"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Dmitrii Makarov", email = "wm-k@mail.ru"},
]
keywords = ["mcp", "agent", "session", "reader", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]
dependencies = [
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# Better token *estimates* for sessions whose format stores no exact usage
# numbers (F3.3). Fully optional: without it ai-r falls back to a rough
# chars/4 heuristic, honestly labeled — never a crash.
tokens = [
    "tiktoken>=0.5",
]
# Meaning-aware search (F5.1): sort="semantic" re-ranks the BM25 top-50
# candidates with a local multilingual embedding model
# (intfloat/multilingual-e5-small, int8 ONNX ~118 MB, run directly via
# onnxruntime + tokenizers — no torch). Model files are downloaded by
# `AI_R_EXTRAS=semantic bash install.sh` (or manually, see README).
# Fully optional: without these packages or the model files semantic sort
# honestly degrades to the plain BM25 order with a reason — never a crash.
semantic = [
    "onnxruntime>=1.17",
    "tokenizers>=0.15",
    "numpy>=1.24",
]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1",
    "pytest-asyncio>=0.23",
    "mypy>=1.8",
    "ruff>=0.6",
]

[project.scripts]
ai-r = "ai_r.cli:main"
ai-r-mcp = "ai_r.mcp_server:main"

[project.urls]
Homepage = "https://github.com/pro-target/ai-r"
Issues = "https://github.com/pro-target/ai-r/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
markers = [
    "host: test reads real ~/.claude|.codex|opencode|.pi|.gemini data; auto-applied to any test using a real_* fixture; skipped when absent and deselected by the hermetic CI job",
]

[tool.coverage.run]
source = ["src/ai_r"]
omit = ["*/tests/*", "*/__pycache__/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.:",
]
fail_under = 80

# Lint config — lenient by design so `ruff check` / `mypy src` run clean on
# the current codebase and tighten incrementally. Enforced in CI (the `lint`
# job runs `ruff check src/` + `mypy src/`).
[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["build", "dist", ".venv", "site-packages"]

[tool.ruff.lint]
# Pyflakes (real bugs: unused imports, undefined names) + syntax errors only.
select = ["F", "E9"]

[tool.mypy]
python_version = "3.11"
ignore_missing_imports = true
warn_unused_ignores = true
# Codebase is not fully annotated yet — opt into strictness per-module later.
check_untyped_defs = false
